fix Shake class bug on mobile

--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -351,3 +351,9 @@
 
     }
 }
+
+@media (max-width: 550px){
+    .Shake {
+        animation: none;
+    }
+}
